syntax = "proto3";

package api.user.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "ecommerce/ecommerce/api/user/v1;v1";

// 用户服务定义
service User {
  // 通过用户名密码注册
  rpc RegisterByPassword(RegisterByPasswordRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/v1/user/register"
      body: "*"
    };
  }
  // 通过用户名密码登录
  rpc LoginByPassword(LoginByPasswordRequest) returns (LoginByPasswordResponse) {
    option (google.api.http) = {
      post: "/v1/user/login"
      body: "*"
    };
  }
  // 根据用户ID获取用户信息
  rpc GetUserByID(GetUserByIDRequest) returns (UserResponse) {
    option (google.api.http) = {
      get: "/v1/user/{user_id}"
    };
  }
}

// 用户信息结构体
message UserInfo {
  uint64 user_id = 1;
  string username = 2;
  string nickname = 3;
  string avatar = 4;
  int32 gender = 5;
  google.protobuf.Timestamp birthday = 6;
}

// 注册请求
message RegisterByPasswordRequest {
  string username = 1;
  string password = 2;
}

// 注册响应
message RegisterResponse {
  uint64 user_id = 1;
}

// 登录请求
message LoginByPasswordRequest {
  string username = 1;
  string password = 2;
}

// 登录响应
message LoginByPasswordResponse {
  string token = 1;
  int64 expires_at = 2; // Token 过期时间戳
}

// 获取用户信息请求
message GetUserByIDRequest {
  uint64 user_id = 1;
}

// 用户信息响应
message UserResponse {
  UserInfo user = 1;
}